[gd_scene load_steps=14 format=2]

[ext_resource path="res://meshes/startsword.dae" type="PackedScene" id=1]
[ext_resource path="res://img/playfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/startscreen.gd" type="Script" id=3]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.113725, 0.113725, 0.113725, 1 )
background_energy = 0.0
ambient_light_energy = 0.0
ssao_enabled = true

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="Shader" id=2]
code = "// https://www.gdquest.com/tutorial/godot/shaders/flag-shader-3d/
shader_type spatial;
render_mode unshaded;

uniform sampler2D uv_offset_texture : hint_black;
uniform vec2 uv_offset_scale = vec2(-0.2, -0.1);
uniform vec2 time_scale = vec2(0.3, 0.0);
uniform float face_distortion = 0.5;


void fragment(){
	ALBEDO = vec3(1, 0.13+UV.x*0.25, 0.16+UV.x*0.25);
}

void vertex(){
	
	vec2 base_uv_offset = UV * uv_offset_scale;
	base_uv_offset += TIME*time_scale;

	float noise = texture(uv_offset_texture, base_uv_offset).r;
	// Convert from 0.0 <=> 1.0 to -1.0 <=> 1.0
	float texture_based_offset = noise * 2.0 - 1.0;
	// Apply dampening
	texture_based_offset *= UV.x;

	VERTEX.y += texture_based_offset;
	// Distort the face to give impression of conserving shape
	VERTEX.z += texture_based_offset * face_distortion * 2.0;
	VERTEX.x += texture_based_offset * -face_distortion;
	
}"

[sub_resource type="OpenSimplexNoise" id=6]

[sub_resource type="NoiseTexture" id=3]
seamless = true
noise = SubResource( 6 )

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 2 )
shader_param/uv_offset_scale = Vector2( -0.2, -0.1 )
shader_param/time_scale = Vector2( 0.3, 0 )
shader_param/face_distortion = 0.5
shader_param/uv_offset_texture = SubResource( 3 )

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 4 )
size = Vector2( 5, 0.3 )
subdivide_width = 32
subdivide_depth = 32

[node name="Spatial" type="Spatial"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.10877, 9.81965 )
fov = 35.0

[node name="UI" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_button" type="Button" parent="UI"]
margin_left = -81.0
margin_top = 103.0
margin_right = 89.0
margin_bottom = 167.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.584314 )
custom_colors/font_color_pressed = Color( 0.584314, 0.823529, 1, 0.607843 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_shadow1" type="Label" parent="UI/play_button"]
show_behind_parent = true
anchor_right = 1.0
margin_right = 170.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.305882, 0.772549, 1, 0.647059 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_shadow2" type="Label" parent="UI/play_button"]
show_behind_parent = true
anchor_right = 1.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.305882, 0.772549, 1, 0.309804 )
text = "PLAY"

[node name="startsword" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.899344, 0.437241, 0, -0.437241, 0.899344, 0, 0, 0, 1, -4.50901, -3.06997, 0.817822 )

[node name="cloth" type="MeshInstance" parent="startsword"]
transform = Transform( 0.912458, 0.203846, 0.354777, 0.408698, -0.412457, -0.814153, -0.0196314, 0.887877, -0.459661, 2.32921, 8.22246, 0.0683081 )
mesh = SubResource( 5 )
material/0 = null
[connection signal="mouse_entered" from="UI/play_button" to="." method="_on_play_button_mouse_entered"]
[connection signal="pressed" from="UI/play_button" to="." method="_on_play_button_pressed"]
